# financial_data_mcp

./: .gitignore  LICENSE  README.md  cspell.json  pyproject.toml  readme.md  requirements.txt
experiments/: copilot-instructions.md  financial_data.md  fun_mcp_server_tests.md  investment_management_data.md  star wars tests.md
scripts/: populate_db.py  star_wars.sql
src/fun_mcp_server/: custom_mcp_tools.py  main.py  readme.md
src/mcp_server_sqlite/: __init__.py  main.py  readme.md  server.py
src/test_data/: populate_db.py  readme.md
