[tool.autopep8]
max_line_length = 260

[tool.flake8]
max-line-length = 260

[pycodestyle]
max_line_length = 120


[tool.isort]
multi_line_output = 5
include_trailing_comma = true
force_grid_wrap = 0
line_length = 80
virtual_env = ".venv"

[project]
name = "mcp-server-sqlite"
version = "0.6.2"
description = "A simple SQLite MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "fastmcp==0.4.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "flake8>=6.0.0"]

[project.scripts]
mcp-server-sqlite = "mcp_server_sqlite:main"
